#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([mooguor], [0.1])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([src/mooguor.cpp])
AC_CONFIG_HEADERS([config.h])

AC_GNU_SOURCE

# Checks for programs.
AC_PROG_LIBTOOL
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

# Checks for libraries.
#AC_CHECK_LIB([bfd], [bfd_openr])

# Checks for header files.
#AC_CHECK_HEADERS([arpa/inet.h fcntl.h malloc.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])

AC_OUTPUT
